# juplit

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml  docs.yml
api/: index.html
docs/: api.md  migrate_from_nbdev.md  using_juplit.py
juplit/: SKILL.md  SKILL_migrate_from_nbdev.md  __init__.py  _dev.py  _tasks.py  cli.py  tasks.py  test_smoke.py  testing.py
migrate_from_nbdev/: index.html
search/: search_index.json
using_juplit/: index.html
